[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iemap"
version = "0.3.1"
authors = [
    { name="Sergio Ferlito", email="sergio.ferlito@enea.it" },
    { name="marco.puccini", email="marco.puccini@enea.it" }
]
maintainers = [
    { name = "Marco Puccini", email = "marco.puccini@enea.it" }
]
description = "Tools to use IEMAP Rest API"
readme = "README.md"
requires-python = ">=3.10"
license.file = "LICENSE"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities"
]
dependencies = [
    "requests==2.28.1",
    "requests_toolbelt==0.9.1",
    "bson==0.5.10",
    "pydantic==1.10.2"
]

[project.urls]
"Homepage" = "https://github.com/ai4mat/iemap-module"
"Bug Tracker" = "https://github.com/ai4mat/iemap-module/issues"